--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -13,11 +13,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "homepage": "https://kyjm2010.github.io/image_gallery",
   "bugs": {
     "url": "https://github.com/kyjm2010/image_gallery/issues"
   },
-  "homepage": "https://github.com/kyjm2010/image_gallery#readme",
-  "dependencies": {
-    "gh-pages": "^3.1.0"
-  }
+  "homepage": "https://github.com/kyjm2010/image_gallery#readme"
 }
